--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,20 +5,26 @@
     <uses-permission android:name="android.permission.INTERNET"/>
 
     <application
+        android:name="com.cactusknights.ChefBookApp"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.ChefBook">
-        <activity android:name="com.cactusknights.chefbook.activities.MainActivity"
-            android:windowSoftInputMode="stateAlwaysHidden|adjustPan">
+        <activity android:name="com.cactusknights.chefbook.screens.main.MainActivity"
+            android:windowSoftInputMode="stateAlwaysHidden|adjustPan"
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
         <activity android:name="com.cactusknights.chefbook.activities.LoginActivity"
+            android:noHistory="true"
+            android:excludeFromRecents="true"
+            android:windowSoftInputMode="stateAlwaysHidden|adjustPan" />
+        <activity android:name="com.cactusknights.chefbook.screens.auth.AuthActivity"
             android:noHistory="true"
             android:excludeFromRecents="true"
             android:windowSoftInputMode="stateAlwaysHidden|adjustPan" />
