--- a/gradle.properties
+++ b/gradle.properties
@@ -18,3 +18,5 @@ android.useAndroidX=true
 # Kotlin code style for this project: "official" or "obsolete":
 kotlin.code.style=official
 android.enableJetifier=true
+kapt.include.compile.classpath=false
+kapt.use.worker.api=true
