--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -27,6 +27,8 @@
                 <data android:scheme="http"/>
                 <data android:scheme="https"/>
                 <data android:host="chefbook.io"/>
+                <data android:pathPrefix="/auth"/>
+                <data android:pathPrefix="/recipes"/>
             </intent-filter>
         </activity>
 
