--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -24,7 +24,7 @@ ktor = "2.3.8"
 sqldelight = "2.0.0"
 datastore = "1.1.0-beta01"
 
-spongycastle = "1.58.0.0"
+tink = "1.12.0"
 
 androidx-core-ktx = "1.12.0"
 androidx-appcompat = "1.6.1"
@@ -36,7 +36,7 @@ google-play-core = "1.10.3"
 
 androidx-activity-compose = "1.8.2"
 androidx-lifecycle = "2.7.0"
-androidx-composeBom = "2024.02.00"
+androidx-composeBom = "2024.02.01"
 androidx-navigationCompose = "2.7.7"
 accompanist = "0.34.0"
 
@@ -57,6 +57,8 @@ compressor = "3.0.1"
 
 [libraries]
 kotlin-gradlePlugin = { group = "org.jetbrains.kotlin", name = "kotlin-gradle-plugin", version.ref = "kotlin" }
+kotlin-test = { group = "org.jetbrains.kotlin", name = "kotlin-test", version.ref = "kotlin" }
+kotlin-test-junit = { group = "org.jetbrains.kotlin", name = "kotlin-test-junit", version.ref = "kotlin" }
 kotlin-serialization = { group = "org.jetbrains.kotlin", name = "kotlin-serialization", version.ref = "kotlin" }
 kotlin-serialization-json = { group = "org.jetbrains.kotlinx", name = "kotlinx-serialization-json", version.ref = "kotlin" }
 kotlin-coroutines-core = { group = "org.jetbrains.kotlinx", name = "kotlinx-coroutines-core", version.ref = "kotlin-coroutines" }
@@ -85,8 +87,7 @@ database-sqldelight-runtime = { group = "app.cash.sqldelight", name = "runtime",
 database-sqldelight-driver-android = { group = "app.cash.sqldelight", name = "android-driver", version.ref = "sqldelight" }
 database-sqldelight-driver-native = { group = "app.cash.sqldelight", name = "native-driver", version.ref = "sqldelight" }
 
-spongycastle-core = { group = "com.madgag.spongycastle", name = "core", version.ref = "spongycastle" }
-spongycastle-prov = { group = "com.madgag.spongycastle", name = "prov", version.ref = "spongycastle" }
+tinkAndroid = { group = "com.google.crypto.tink", name = "tink-android", version.ref = "tink" }
 
 android-gradlePlugin = { group = "com.android.tools.build", name = "gradle", version.ref = "agp" }
 
